Remove redundant borders and fix map flickering while printing

--- a/nextgisweb/webmap/amd/ngw-webmap/template/resources/Display.css
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/resources/Display.css
@@ -7,7 +7,7 @@ body, html { width: 100%; height: 100%; margin:0; padding: 0; overflow: hidden; 
     width: 100%;
 }
 
-.webmap-display > .dijitTabContainer > .dijitTabPaneWrapper{
+.webmap-display > div > .dijitTabContainer > .dijitTabPaneWrapper{
     border: 0;
 }
 
